# libdwengo-sdcc

./: README.md  configure.ac
lib/: Makefile.am  dwengoConfig.h  dwengoLCD.c  dwengoLCD.h
lib/compiler/: sdcc_pic16_pwm.h
share/: Makefile.am  Makefile.in  Makefile.proj
